[gd_scene load_steps=4 format=3 uid="uid://cu4adec1w1nbf"]

[ext_resource type="PackedScene" uid="uid://s60m6a1gqyqs" path="res://assets/gems/emerald.aseprite" id="1_50bj7"]
[ext_resource type="Script" path="res://scripts/ui/level_complete_screen_container.gd" id="1_a5sy6"]
[ext_resource type="PackedScene" uid="uid://3o0jms1uw10g" path="res://assets/gems/ruby.aseprite" id="2_y2cgp"]

[node name="LevelCompleteScreenContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a5sy6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0117647, 0.0509804, 0.0117647, 0.780392)

[node name="EmeraldsCollectedLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = -224.0
offset_right = 400.0
offset_bottom = -201.0
grow_vertical = 2
bbcode_enabled = true
text = "collected: ##/## (##%)"

[node name="RubiesCollectedLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = -128.0
offset_right = 472.0
offset_bottom = -105.0
grow_vertical = 2
bbcode_enabled = true
text = "collected: ##/## (##%)"

[node name="emerald" parent="." instance=ExtResource("1_50bj7")]
position = Vector2(80, 152)
frame_progress = 0.619936

[node name="ruby" parent="." instance=ExtResource("2_y2cgp")]
position = Vector2(80, 240)
scale = Vector2(1.5, 1.5)

[node name="TimeElapsedLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -64.0
offset_right = 792.0
offset_bottom = -41.0
grow_vertical = 2
bbcode_enabled = true
text = "Time elapsed for this run: ## minutes ## seconds ## milliseconds (##:##:##)"

[node name="ContinueButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -80.0
offset_right = 192.0
offset_bottom = -32.0
grow_vertical = 0
text = "Continue"

[node name="RestartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -80.0
offset_right = -64.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
text = "Restart"

[node name="EnemiesDefeatedLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 72.0
offset_top = 104.0
offset_right = 640.0
offset_bottom = 127.0
grow_vertical = 2
bbcode_enabled = true
text = "Enemies defeated: ##/## (##%)"

[node name="ParTimeLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_right = 792.0
offset_bottom = 23.0
grow_vertical = 2
bbcode_enabled = true
text = "Par time: ## minutes ## seconds ## milliseconds (##:##:##)"

[node name="TimeDiffLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = 48.0
offset_right = 945.0
offset_bottom = 88.0
grow_vertical = 2
bbcode_enabled = true
text = "Difference between your time and par time: (##:##:##) (faster/slower/tie!)"

[node name="LevelCompleteLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -144.0
offset_top = 32.0
offset_right = 184.0
offset_bottom = 88.0
grow_horizontal = 2
bbcode_enabled = true
text = "[pulse color=#ffd700 freq=3.0][font_size=30]Level completed![/font_size][/pulse]"

[connection signal="gui_input" from="ContinueButton" to="." method="_on_continue_button_gui_input"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="gui_input" from="RestartButton" to="." method="_on_restart_button_gui_input"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
